# aigovops-beacon

./: .dockerignore  .gitignore  .gitignore-additions  APPLY.md  ARCHITECTURE-BETA.md  BENCHMARKS.md  CHANGELOG.md  CHANGES-v0.2.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEMOS.md  ENGAGEMENT.md  GOVERNANCE.md  JOIN.md  LAB.md  LICENSE  MEETINGS.md  QUICKSTART.md  README.md  RELATED.md  ROADMAP.md  SECURITY.md  STANDARDS.md  STEWARD.md  SUPERAGENT.md  aigovops-fact-check.md  apply.sh  diagnostic.html  published-lab-offline.html  published-lab.html  pyproject.toml  pytest.ini  slides.html  verification-report.html  verify.py
.github/: pull_request_template.md
agent/: README.md  package.json  worker.js  wrangler.toml
audit/: audit-log-after-a.jsonl  audit-log-after-b.jsonl  audit-log.jsonl
beacons/: README.md  _common.py  artifact_beacon.py  model_beacon.py  prompt_beacon.py
checklist/: README.md  wizard.py
checklists/: eu-ai-act-art13.v1.yaml  hipaa-for-ai.v1.yaml  iso-iec-42001.v1.yaml  nist-ai-rmf.v1.yaml
crosswalks/: overt-mapping.yaml
deploy/: .env.beta.example  Dockerfile  README.md  beta.yml  do-app.yaml  docker-compose.yml  fly.toml  lab.yml  railway.json  render.yaml
docs/: ARCHITECTURE.md  ARCHITECTURE_V2.md  AUDITOR_WORKSHOP.md  CONTROL_PLANE.md  PROFILE_REGISTRATION.md  RECEIPT_SCHEMA.md  STUDIO_FLOW.md  USING_LIVE_LAB.md  build-log.md  draft-v0.2-glacis.html  howibuilt.html  index.html  lab-100.html  lab-200.html  lab.html  quiz.html  robots.txt  sitemap.xml
extension/: README.md  background.js  managed_schema.json  manifest.json  popup.html  popup.js
frameworks/: aida-canada.xml  aida-canada.yaml  australia-ai-ethics-voluntary-ai-safety-standard.xml  australia-ai-ethics-voluntary-ai-safety-standard.yaml  brazil-pl-2338-2023-lgpd.xml  brazil-pl-2338-2023-lgpd.yaml  build_registry.py  china-interim-measures-generative-ai-services.xml  china-interim-measures-generative-ai-services.yaml  colorado-ai-act-sb24-205.xml  colorado-ai-act-sb24-205.yaml  eu-ai-act.xml  eu-ai-act.yaml  gdpr-article-22-35.xml  gdpr-article-22-35.yaml  hipaa-security-rule.xml  hipaa-security-rule.yaml  ieee-7000-2021.xml  ieee-7000-2021.yaml  index.json  (+30 more)
(+178 files in other folders)
